--- a/resources/views/admin/orders.ejs
+++ b/resources/views/admin/orders.ejs
@@ -1,6 +1,7 @@
 <section class="orders light-section">
     <div class="container mx-auto pt-12">
         <h1 class="font-bold text-lg mb-4">All orders</h1>
+        <a href="/admin/all">CRUD</a>
         <table class="w-full table-auto bg-white">
             <thead>
                 <tr>
