--- a/resources/views/home.ejs
+++ b/resources/views/home.ejs
@@ -15,7 +15,7 @@
     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 col-gap-12 row-gap-16">
         <% pizzas.forEach(function(pizza) { %>
         <div class="w-full md:w-64">
-            <img class="h-40 mb-4 mx-auto" src="/img/<%= pizza.image %>" alt="">
+            <img class="h-40 mb-4 mx-auto" src="<%= pizza.image %>" alt="">
             <div class="text-center">
                 <h2 class="mb-4 text-lg"><%= pizza.name %></h2>
                 <span class="size py-1 px-4 rounded-full uppercase text-xs"><%= pizza.size %></span>
